--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Sorry, I'm updating my website! </h1>
+        <h1>Hi, it's Leura! Sorry, I'm updating my website RIGHT NOW! </h1>
         
         <p>Should be up and running soon...</p>
         
