--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Hi, it's Leura! Sorry, I'm updating my website RIGHT NOW! </h1>
+        <h1 style="background-color:DodgerBlue;">Hi, it's Leura!</h1>
+
+        <h2 style="background-color:Tomato;">Sorry, I'm updating my website RIGHT NOW! </h1>
         
         <p>Should be up and running soon...</p>
         
