--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         
         <p>Just look up 'smitleu' in itch.io, and you'll find me! Yahoo! </p>
 
-        <p>I'm also @smitleu on blursky and twitter hehe </p>
+        <p>I'm also @smitleu on bluesky and twitter hehe </p>
+
+        <p>Thanks cya soon!!</p>
         
     </body>
 </html>
