--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <p>In the meantime, you can find me in other places</p>
         
-        <p>Just look up 'smitleu' in itch.io, and you'll find me! Yahoo! </p>
+        <p>Just look up 'smitleu' in itch.io, and you'll find me! Click <a href="https://smitleu.itch.io/">HERE</a> to go there!!  </p>
 
         <p>I'm also @smitleu on bluesky and twitter hehe </p>
 
