--- a/index.html
+++ b/index.html
@@ -5,26 +5,18 @@
 
 <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
 
-<head>
-
-	<title>Leura Smith</title>
-</head>
+<head> <title>Leura Smith</title> </head>
 
 <body
 	<center>
-
 <br>
 <p>Hi! It's Leura!</p>
 <br>
-<p>
-	<a href="about.html">About!</a>
-</p>
-<p>
-	<a href="games.html">Games!</a>
-</p>
-<p>
-	<a href="contact.html">Contact....!</a>
-</p>
+<h1 style="color:Tomato;"> HEADS UP!! I'm currently updaing my website right NOW!! So it might look a little janky. Thanks for your patience :)</h1>
+	
+<p> <a href="about.html">About!</a> </p>
+<p> <a href="games.html">Games!</a> </p>
+<p> <a href="contact.html">Contact....!</a> </p>
 
 
 </center>
