--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <br>
 <h1 style="color:Tomato;"> HEADS UP!! I'm currently updaing my website right NOW!! So it might look a little janky. Thanks for your patience :)</h1>
 	
-<p> <a href="about.html">About!</a> </p>
+<!-- <p> <a href="about.html">About!</a> </p>
 <p> <a href="games.html">Games!</a> </p>
-<p> <a href="contact.html">Contact....!</a> </p>
+<p> <a href="contact.html">Contact....!</a> </p> -->
 
 
 </center>
