--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <p> <a href="games.html">Games!</a> </p>
 <p> <a href="contact.html">Contact....!</a> </p> -->
 
+<!-- <img height = "125" id="img2" src="Text/game1.png"/> -->
 
 </center>
 
