--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p> <a href="games.html">Games!</a> </p>
 <p> <a href="contact.html">Contact....!</a> </p> -->
 
-<!-- <img height = "125" id="img2" src="Text/game1.png"/> -->
+<img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/9c8efaefad037f95b831c68132ef1e3c-sticker.PNG?raw=true"/>
 
 </center>
 
