--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <br>
 <p>Hi! It's Leura!</p>
 <br>
-<h1 style="color:Tomato;"> HEADS UP!! I'm currently updaing my website right NOW!! So it might look a little janky. Thanks for your patience :)</h1>
+<h1 style="color:Tomato;"> HEADS UP!! I'm currently updaing my website right NOW!! So it might look a little janky. Thanks for your patience!</h1>
+<p> In the meantime, you can find me on itch.io <a href="https://smitleu.itch.io/">heeere</a>, and I'm also on twitter and bluesky with the handle @smitleu :) </p>
 	
 <!-- <p> <a href="about.html">About!</a> </p>
 <p> <a href="games.html">Games!</a> </p>
