--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p> <a href="contact.html">Contact....!</a> </p> -->
 
 <img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/9c8efaefad037f95b831c68132ef1e3c-sticker.PNG?raw=true"/> 
-<h3 style="color:Gainsboro;"> (pic of me currently programming this website)</h3>
+<h3 style="color:Tan;"> (pic of me currently programming this website)</h3>
 
 </center>
 
