--- a/about.html
+++ b/about.html
@@ -9,22 +9,21 @@
 <body>
 <center>
 
-	<p>
-		<a href="index.html">
-	      <img height = "100" id="img1" src="Text/name1.png"/ class="picenlargesmall">
+<p><a href="index.html">
+	      Leura Smith!
 	  </a>
 	</p>
-	<img height = "75" id="img1" src="Text/about1.png" class="picenlargesmall"/>
-
 
 		<div id="wrapper">
     <div id="column_container">
-        <div id="column1"><img height=400" src="Pics/selfie.png"></div>
-        <div id="column2"><!-- wp:paragraph --><p>Hello! I'm Leura Smith, an indie game developer, based in Melbourne, Australia. I aim to make games anyone can play, especially women and children. </p>
+        <div id="column1"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/9c8efaefad037f95b831c68132ef1e3c-sticker.PNG"></div>
+        <div id="column2"><!-- wp:paragraph --><p>Hello! I'm Leura Smith, an indie game developer, based in Melbourne, Australia. I'm a keen game designer and graduate architect, and I love all things about... well... those two things! . </p>
 <!-- /wp:paragraph -->
 
 <!-- wp:paragraph -->
-<p>I've worked on a pretty broad range of projects, from games about pigeons, to more arty, exhibition games, to games made with architecture studios. I really love making games!</p>
+<p>I've worked on a pretty broad range of game projects, from games about pigeons, to more arty, exhibition games, to games made with architecture studios. I really love making games!</p>
+<p>I've done some cool stuff with architecture too - one is my submission for a school at the Seoul Bienalle, in 2023. </p>
+
 <!-- wp:paragraph -->
 <p>I've done some talks about my design process - </p>
 <!-- /wp:paragraph -->
