--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <h1 style="color:Tomato;"> HEADS UP!! I'm currently updaing my website right NOW!! So it might look a little janky. Thanks for your patience!</h1>
 <p> In the meantime, you can find me on itch.io <a href="https://smitleu.itch.io/">heeere</a>, and I'm also on twitter and bluesky with the handle @smitleu :) </p>
 	
-<!-- <p> <a href="about.html">About!</a> </p>
-<p> <a href="games.html">Games!</a> </p>
+<p> <a href="about.html">About!</a> </p>
+<!-- <p> <a href="games.html">Games!</a> </p>
 <p> <a href="contact.html">Contact....!</a> </p> -->
 
 <img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/9c8efaefad037f95b831c68132ef1e3c-sticker.PNG?raw=true"/> 
