--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
 		<div id="wrapper">
     <div id="column_container">
-        <div id="column1"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/9c8efaefad037f95b831c68132ef1e3c-sticker.PNG"></div>
+        <div id="column1"><img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/9c8efaefad037f95b831c68132ef1e3c-sticker.PNG?raw=true"/></div>
         <div id="column2"><!-- wp:paragraph --><p>Hello! I'm Leura Smith, an indie game developer, based in Melbourne, Australia. I'm a keen game designer and graduate architect, and I love all things about... well... those two things! . </p>
 <!-- /wp:paragraph -->
 
