--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 	      Leura Smith!
 	  </a>
 	</p>
-
+<p>About me :)</p>
 		<div id="wrapper">
     <div id="column_container">
         <div id="column1"><img height = "300" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/9c8efaefad037f95b831c68132ef1e3c-sticker.PNG?raw=true"/></div>
