--- a/contact.html
+++ b/contact.html
@@ -10,15 +10,13 @@
 <center>
 
 	<p>
-		<a href="index.html">
-	      <img height = "100" id="img1" src="Text/name1.png"/>
-	  </a>
+		<a href="index.html">Leura Smith!</a>
 	</p>
-	<img height="75" id="img1" src="Text/contact1.png"/>
+<p>Contact me...!</p>
 <br>
 <br>
 	<p>
-		Twitter: @smitleu 
+		Twitter and Bluesky: @smitleu 
 	</p> 
 	<p>
 		<a href="https://twitter.com/smitleu?lang=en"><img height="75" src="Pics/twitter.png"></a>
