--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,13 @@
 		Twitter and Bluesky: @smitleu 
 	</p> 
 	<p>
-		<a href="https://twitter.com/smitleu?lang=en"><img height="75" src="Pics/twitter.png"></a>
+		<a href="https://twitter.com/smitleu?lang=en"><img height="75" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/twitterloho.png?raw=true"></a>
 	</p>
 	<p>
 		Itch.io: smitleu  
 	</p>
 	<p>
-		<a href="https://smitleu.itch.io/"><img height="75" src="Pics/itch.png"></a>
+		<a href="https://smitleu.itch.io/"><img height="75" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/itchlogo.png?raw=true"></a>
 	</p>
 		<p>
 		Email: smitleu@gmail.com
