--- a/games.html
+++ b/games.html
@@ -66,16 +66,16 @@
 
 
     <div id="column_container">
-        <div id="column1_games"><img height=400" src="Pics/deleat.png"></div>
+        <div id="column1_games"><img height=400" src='https://github.com/smitleu/smitleu.github.io/blob/Pics/deleat.png?raw=true'></div>
         <div id="column2_games"><h1>DelEAT</h1>
 
         	<p style="font-size:16px" class="has-text-align-left">DelEAT was a game I was commissioned to make for GDC Delete 2019. </p>
 
-        		<p style="font-size:16px" class="has-text-align-left">Delete was a party hosted by Bar SK, for GDC 2019. The premise of Delete was that all the featured games would be deleted at midnight. </p>
+        		<p style="font-size:16px" class="has-text-align-left">The premise of Delete was that all the featured games would be deleted at midnight. It was for GDC and it was fun to be comissioned to a game for!</p>
 
 <p style="font-size:16px" class="has-text-align-left">This means that delEAT no longer exists. It was a game about making cakes, based off the Cooking Mama and Tamagotchi games (Nintendo DS). Players made cakes and put them in the oven to cook. At midnight, all the cakes finished cooking, and exploded out of the oven and onto the screen. </p>
 
-<p style="font-size:16px" class="has-text-align-left">It was great seeing everyone cheer and get excited about making cakes, and weirdly therapeutic deleting the game in the middle of the party. </p>
+<p style="font-size:16px" class="has-text-align-left">It was great seeing everyone cheer and get excited about making cakes, and weirdly therapeutic deleting the game in the middle of the party. We gave everyone sweets when the game got deleted, so it was like their cakes came out of the game, and into the real life party!</p>
         </div>
     </div>
 
