--- a/games.html
+++ b/games.html
@@ -21,7 +21,7 @@
 
 <div id="wrapper">
     <div id="column_container">
-        <div id="column1_games"><img height=400" src="Pics/pigeongame.png"></div>
+        <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/pigeongame.png?raw=true"></div>
         <div id="column2_games"><h1>Pigeon Game</h1>
         <!-- wp:paragraph {"align":"left","customFontSize":16} -->
 <p style="font-size:15px" class="has-text-align-left">Pigeon Game is a game about playing with... pigeons! In Pigeon Game, you can chase, feed, pet, befriend and hold pigeons. I made this game primarily as a thing for women and children to enjoy.  </p>
@@ -46,7 +46,7 @@
 
     </div>
     <div id="column_container">
-         <div id="column1_games"><img height=400" src="Pics/dunecreatures.png"></div>
+         <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/dunecreatures.png?raw=true"></div>
         <div id="column2_games"><h1>Dune Creatures</h1>
         	<br>
         	<br>
@@ -66,7 +66,7 @@
 
 
     <div id="column_container">
-        <div id="column1_games"><img height=400" src='https://github.com/smitleu/smitleu.github.io/blob/Pics/deleat.png?raw=true'></div>
+        <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/deleat.png?raw=true"></div>
         <div id="column2_games"><h1>DelEAT</h1>
 
         	<p style="font-size:16px" class="has-text-align-left">DelEAT was a game I was commissioned to make for GDC Delete 2019. </p>
@@ -82,7 +82,7 @@
 
 
     <div id="column_container">
-        <div id="column1_games"><img height=400" src="Pics/findtheplot.png"></div>
+        <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/findtheplot.png?raw=true"></div>
         <div id="column2_games"><h1>Find the Plot</h1>
         	<br>
         	<!-- wp:paragraph {"align":"left","customFontSize":16} -->
