--- a/games.html
+++ b/games.html
@@ -10,11 +10,9 @@
 	<center>
 
 	<p>
-		<a href="index.html">
-	      <img height = "100" id="img1" src="Text/name1.png"/>
-	  </a>
+		<a href="index.html">Leura Smith!!!!!</a>
 	</p>
-	<img height = "75" id="img1" src="Text/game1.png"/>
+<p>games?! (at least some of them!)</p>
 
 
 
