--- a/games.html
+++ b/games.html
@@ -12,7 +12,7 @@
 	<p>
 		<a href="index.html">Leura Smith!!!!!</a>
 	</p>
-<p>games?! (at least some of them!)</p>
+<h1>games?! (at least some of them!)</h1>
 
 
 
