--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	<p>
 		<a href="index.html">Leura Smith!</a>
 	</p>
-<h1>Contact me...!</h1>
+<h1 style="color:Tomato;>Contact me...!</h1>
 <br>
 <br>
 	<p>
