--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 	      Leura Smith!
 	  </a>
 	</p>
-<h1 style="color:Tomato";>About me :)</h1>
+<h1 style="color:Tomato;">About me :)</h1>
 		<div id="wrapper">
     <div id="column_container">
         <div id="column1"><img height = "300" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/itsleura.png?raw=true"/></div>
