--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 	
 	<p> <a href="about.html">About!</a> </p>
 	<p> <a href="games.html">Games!</a> </p>
+	<p> <a href="architecture.html">Architecture!</a> </p>
 	<p> <a href="contact.html">Contact....!</a> </p>
+	
 
 	<img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/9c8efaefad037f95b831c68132ef1e3c-sticker.PNG?raw=true"/> 
 	<h3 style="color:Tan;"> (pic of me currently programming this website)</h3>
