--- a/architecture.html
+++ b/architecture.html
@@ -20,43 +20,31 @@
 <div id="wrapper">
     <div id="column_container">
         <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/pigeongame.png?raw=true"></div>
-        <div id="column2_games"><h1>Pigeon Game</h1>
+        <div id="column2_games"><h1>Fitzroy House</h1>
         <!-- wp:paragraph {"align":"left","customFontSize":16} -->
-<p style="font-size:15px" class="has-text-align-left">Pigeon Game is a game about playing with... pigeons! In Pigeon Game, you can chase, feed, pet, befriend and hold pigeons. I made this game primarily as a thing for women and children to enjoy.  </p>
+<p style="font-size:15px" class="has-text-align-left">Fitzroy House is a proposal for a new building system, to address the housing crisis and genrefication in Fitzroy. It proposes a kit of parts (kind of like lego blocks) that low income earners can use to create livable spaces in the back alleys of Fitzroy streets.</p>
 <!-- /wp:paragraph -->
 
 <!-- wp:paragraph {"customFontSize":16} -->
-<p style="font-size:15px">I've done a few talks about Pigeon Game:<br>- IndieCade 2019 USA, Kindness in Games<br>- Freeplay Parallels 2018, Making a Game for my Mum (Pigeon Game) (<a href="https://www.youtube.com/watch?v=edEWV0UNpx4&amp;t=1084s">https://www.youtube.com/watch?v=edEWV0UNpx4&amp;t=1084s</a>)</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph {"customFontSize":16} -->
-<p style="font-size:15px">Pigeon Game has also shown at a few exhibitions:<br>- GCAP 2019, Hovergarden 'cozy space' game feature<br>- 'Froth women in games' 2019 Bar SK Exhibition<br>- ACMI Audience Lab 2018 game feature</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph {"customFontSize":16} -->
-<p style="font-size:15px">It's also won an award, nice!<br>- Freeplay 2019 'Best Student Game' winner</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph {"align":"left","customFontSize":16} -->
-<p style="font-size:15px" class="has-text-align-left">Click <strong><a href="https://smitleu.itch.io/pigeon-game">here</a> </strong>to give it a play!</p>
+<p style="font-size:15px">I design Fitzroy Street as my final project for my Masters of Architecture. It sits somewhere in between architecture and games, and I encouraged the reviewers to imagine how they might use the building blocks to design housing solutions.</p>
 <!-- /wp:paragraph --></div>
 
 
     </div>
     <div id="column_container">
          <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/dunecreatures.png?raw=true"></div>
-        <div id="column2_games"><h1>Dune Creatures</h1>
+        <div id="column2_games"><h1>Seoul School of Graffiti</h1>
         	<br>
         	<br>
         	<br>
 
         	<!-- wp:paragraph {"align":"left","customFontSize":16} -->
-<p style="font-size:16px" class="has-text-align-left">Dune Creatures is a game I made in collaboration with BlacketSmith Architects, and is about exploring spaces that many people will never see. It's based off a model of their 'North Coogee Picnic Shelters' - you can read about the physical structure <strong><a href="https://architectureau.com/articles/dune-creatures/">here</a> </strong>. 
- I wanted to play with bringing physical places onto the virtual plane, and I had a great time doing it.</p> 
+<p style="font-size:16px" class="has-text-align-left">During the design for this scheme, I visited Seoul, and was really taken by how the city shows it age and history - the underside of a industrial bridge marked with the changing tides of a river, grass popping through concrete paths, graffiti on structural columns. I found it all pretty beautiful, and thought it would be nice to design a 'school' that showcases the different ways humans and non humans alike, leave their mark on the city.</p> 
 <!-- /wp:paragraph -->
 
 <!-- wp:paragraph {"align":"left","customFontSize":16} -->
-<p style="font-size:16px" class="has-text-align-left">You can play Dune Creatures <strong><a href="https://smitleu.itch.io/dune-creatures">here</a> </strong>.</p>
+<p style="font-size:16px" class="has-text-align-left">I designed the 'school' for the <strong><a href="https://2023.seoulbiennale.org/indexENG.html">Seoul Biennale of Architecture and Urbanism</a> </strong>, and my submission was chosen for exhibition during the event!</p>
+<p style="font-size:16px" class="has-text-align-left">It was also exhibited at the <strong><a href="https://www.uia-architectes.org/en/events/world-congresses-of-architects/copenhagen-2023_uia-architecture-congress-2/">World Congress of Architects</a> </strong>, as an example of architecture and nature existing in harmony.</p>
 <!-- /wp:paragraph -->
         </div>
     </div>
@@ -65,15 +53,10 @@
 
     <div id="column_container">
         <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/deleat.png?raw=true"></div>
-        <div id="column2_games"><h1>DelEAT</h1>
+        <div id="column2_games"><h1>Museum of Routine</h1>
 
-        	<p style="font-size:16px" class="has-text-align-left">DelEAT was a game I was commissioned to make for GDC Delete 2019. </p>
+        	<p style="font-size:16px" class="has-text-align-left">In this project, I designed a park enclosed with a circular pavillion, where visitors could sit and watch people playing in the park. It was about creating times to stop, and watch. </p>
 
-        		<p style="font-size:16px" class="has-text-align-left">The premise of Delete was that all the featured games would be deleted at midnight. It was for GDC and it was fun to be comissioned to a game for!</p>
-
-<p style="font-size:16px" class="has-text-align-left">This means that delEAT no longer exists. It was a game about making cakes, based off the Cooking Mama and Tamagotchi games (Nintendo DS). Players made cakes and put them in the oven to cook. At midnight, all the cakes finished cooking, and exploded out of the oven and onto the screen. </p>
-
-<p style="font-size:16px" class="has-text-align-left">It was great seeing everyone cheer and get excited about making cakes, and weirdly therapeutic deleting the game in the middle of the party. We gave everyone sweets when the game got deleted, so it was like their cakes came out of the game, and into the real life party!</p>
         </div>
     </div>
 
@@ -81,19 +64,10 @@
 
     <div id="column_container">
         <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/findtheplot.png?raw=true"></div>
-        <div id="column2_games"><h1>Find the Plot</h1>
+        <div id="column2_games"><h1>Regenerative House</h1>
         	<br>
         	<!-- wp:paragraph {"align":"left","customFontSize":16} -->
-<p style="font-size:16px" class="has-text-align-left">Find The Plot was one of the first games I ever made and was really happy with! It's a game about being a teenage girl, and being surrounded by boyband fan culture. </p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph {"customFontSize":16} -->
-<p style="font-size:16px">I made Find The Plot in a week, as part of a 'Game a Week' exercise. <br><br>Find the Plot was my first game to be part of an exhibition, which is really exciting:<br>- Bar SK 2017 'Game a Week' exhibition</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph {"align":"left","customFontSize":16} -->
-<p style="font-size:16px" class="has-text-align-left">Give 'Find the Plot' a look <a href="https://smitleu.itch.io/find-the-plot">here</a>. </p>
-<!-- /wp:paragraph -->
+<p style="font-size:16px" class="has-text-align-left">This scheme looked at ways to rennovate an existing 1940's house in Melbourne, and make it not only energy effecient, but regenerative in energy, resource, and for the larger community.</p>
         </div>
     </div>
 </div>
