--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<br>
 	<p>Hi! It's Leura!</p>
 	<br>
-	<h1 style="color:Tomato;"> HEADS UP!! I'm currently updaing my website right NOW!! So it might look a little janky. Thanks for your patience!</h1>
-	<p> In the meantime, you can find me on itch.io <a href="https://smitleu.itch.io/">heeere</a>, and I'm also on twitter and bluesky with the handle @smitleu :) </p>
+	<h1 style="color:Tomato;"> Thanks for visiting my website!</h1>
+	<p> I'm a game developer and architectural graduate, and I'm currently working on Canvas Street - a game about doing architecture :) </p>
 	
 	<p> <a href="about.html">About!</a> </p>
 	<p> <a href="games.html">Games!</a> </p>
@@ -22,7 +22,7 @@
 	
 
 	<img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/9c8efaefad037f95b831c68132ef1e3c-sticker.PNG?raw=true"/> 
-	<h3 style="color:Tan;"> (pic of me currently programming this website)</h3>
+	<h3 style="color:Tan;"> (pic of me currently programming this)</h3>
 
 </center>
 
