--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<p>Hi! It's Leura!</p>
 	<br>
 	<h1 style="color:Tomato;"> Thanks for visiting my website!</h1>
-	<p> I'm a game developer and architectural graduate, and I'm currently working on Canvas Street - a game about doing architecture :) </p>
-	
+	<p style="font-size:15px"> I'm a game developer and architectural graduate, and I'm currently working on Canvas Street - a game about doing architecture :) </p>
+	<br>
 	<p> <a href="about.html">About!</a> </p>
 	<p> <a href="games.html">Games!</a> </p>
 	<p> <a href="architecture.html">Architecture!</a> </p>
@@ -22,7 +22,7 @@
 	
 
 	<img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/9c8efaefad037f95b831c68132ef1e3c-sticker.PNG?raw=true"/> 
-	<h3 style="color:Tan;"> (pic of me currently programming this)</h3>
+	<h3 style="color:Tan;"> (pic of me programming this website)</h3>
 
 </center>
 
