--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 	<p>Hi! It's Leura!</p>
 	<br>
 	<h1 style="color:Tomato;"> Thanks for visiting my website!</h1>
-	<p style="font-size:15px"> I'm a game developer and architectural graduate, and love both those things. I'm currently working on Canvas Street - a game about doing architecture :) </p>
-	<p style="font-size:15px color:Tan;"> I'm currently working on Canvas Street - a game about doing architecture :) </p>
+	<p> I'm a game developer and architectural graduate, and love both those things.</p>
+	<p> I'm currently working on Canvas Street - a game about doing architecture :) </p>
 
 	<br>
+	<p style="color:Tan;"> You can learn some here here!! </p>
+
 	<p> <a href="about.html">About!</a> </p>
 	<p> <a href="games.html">Games!</a> </p>
 	<p> <a href="architecture.html">Architecture!</a> </p>
