--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body
 <center>
 	<br>
-	<p>Hi! It's Leura!</p>
+	<p>Hi! It's Leura! <img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/medrawing.png?raw=true"/> </p>
 	<br>
 	<h1 style="color:Tomato;"> Thanks for visiting my website!</h1>
 	<p> I'm a game developer and architectural graduate, and love both those things.</p>
