--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <center>
 	<br>
 	<img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"/> 
-	<p>Hi! It's Leura!</p>
+	<p>Hi! I'm Leura Smith!</p>
 	<br>
 	<h1 style="color:Tomato;"> Thanks for visiting my website!</h1>
 	<p> I'm a game developer and architectural graduate, and love both those things.</p>
