--- a/games.html
+++ b/games.html
@@ -4,7 +4,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
 <head>
-	<title>Games</title>
+	<title>Leura Smith Games</title>
 </head>
 <body>
 	<center>
