--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
 <head>
-	<title>About</title>
+	<title>Leura Smith About</title>
 </head>
 <body>
 <center>
