--- a/architecture.html
+++ b/architecture.html
@@ -4,7 +4,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
 <head>
-	<title>Architecture</title>
+	<title>Leura Smith Architecture</title>
 </head>
 <body>
 	<center>
