--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
 <head>
-	<title>Contact</title>
+	<title>Leura Smith Contact</title>
 </head>
 <body>
 <center>
