--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body
 <center>
 	<br>
-	<img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"/> 
-	<p>Hi! I'm Leura Smith!</p>
+	<div id="wrapper">
+    <div id="column_container">
+	<div id="column1"><img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"/></div>
+	 <div id="column2"><p>Hi! I'm Leura Smith!</p>
 	<br>
 	<h1 style="color:Tomato;"> Thanks for visiting my website!</h1>
 	<p> I'm a game developer and architectural graduate, and love both those things.</p>
@@ -25,7 +27,9 @@
 	<p> <a href="architecture.html">Architecture!</a> </p>
 	<p> <a href="contact.html">Contact....!</a> </p>
 	
-
+</div>
+    </div>
+</div>
 </center>
 
 </body>
