--- a/architecture.html
+++ b/architecture.html
@@ -32,7 +32,7 @@
 
     </div>
     <div id="column_container">
-         <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/dunecreatures.png?raw=true"></div>
+         <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/main/SeoulWestElevation.jpg?raw=true"></div>
         <div id="column2_games"><h1>Seoul School of Graffiti</h1>
 
         	<!-- wp:paragraph {"align":"left","customFontSize":16} -->
@@ -60,7 +60,7 @@
 
 
     <div id="column_container">
-        <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/findtheplot.png?raw=true"></div>
+        <div id="column1_games"><img height=200" src="https://github.com/smitleu/smitleu.github.io/blob/main/RegenHouse.jpg?raw=true"></div>
         <div id="column2_games"><h1>Regenerative House</h1>
         	<br>
         	<!-- wp:paragraph {"align":"left","customFontSize":16} -->
