--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body
 <center>
 	<br>
+	<p>Hi! I'm Leura Smith!</p>
+	<br>
+	<h1 style="color:Tomato;"> Thanks for visiting my website!</h1>
 	<div id="wrapper">
     <div id="column_container">
 	<div id="column1"><img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"/></div>
-	 <div id="column2"><p>Hi! I'm Leura Smith!</p>
-	<br>
-	<h1 style="color:Tomato;"> Thanks for visiting my website!</h1>
+	 <div id="column2">
 	<p> I'm a game developer and architectural graduate, and love both those things.</p>
 	<p> I'm currently working on Canvas Street - a game about doing architecture :) </p>
 
