--- a/architecture.html
+++ b/architecture.html
@@ -19,7 +19,7 @@
 
 <div id="wrapper">
     <div id="column_container">
-        <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/pigeongame.png?raw=true"></div>
+        <div id="column1_games"><img height=200" src="https://github.com/smitleu/smitleu.github.io/blob/main/FitzroyHouseSketch.png?raw=true"></div>
         <div id="column2_games"><h1>Fitzroy House</h1>
         <!-- wp:paragraph {"align":"left","customFontSize":16} -->
 <p style="font-size:15px" class="has-text-align-left">Fitzroy House is a proposal for a new building system, to address the housing crisis and genrefication in Fitzroy. It proposes a kit of parts (kind of like lego blocks) that low income earners can use to create livable spaces in the back alleys of Fitzroy streets.</p>
@@ -32,7 +32,7 @@
 
     </div>
     <div id="column_container">
-         <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/main/SeoulWestElevation.jpg?raw=true"></div>
+         <div id="column1_games"><img height=200" src="https://github.com/smitleu/smitleu.github.io/blob/main/SeoulWestElevation.jpg?raw=true"></div>
         <div id="column2_games"><h1>Seoul School of Graffiti</h1>
 
         	<!-- wp:paragraph {"align":"left","customFontSize":16} -->
@@ -49,7 +49,7 @@
 
 
     <div id="column_container">
-        <div id="column1_games"><img height=400" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/deleat.png?raw=true"></div>
+        <div id="column1_games"><img height=200" src="https://github.com/smitleu/smitleu.github.io/blob/main/MuseumSketch.jpg?raw=true"></div>
         <div id="column2_games"><h1>Museum of Routine</h1>
 
         	<p style="font-size:16px" class="has-text-align-left">In this project, I designed a park enclosed with a circular pavillion, where visitors could sit and watch people playing in the park. It was about creating times to stop, and watch. </p>
