--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 	<div id="wrapper">
 	<div id="column3">
 	<br>
-	<p>Hi! I'm Leura Smith!</p>
+	<p>Hi! I'm Leura Smith! <img height = "100" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"/></p>
 	<br>
 	<h1 style="color:Tomato;"> Thanks for visiting my website!</h1>
-	<img height = "125" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"/>
 	<p> I'm a game developer and architectural graduate, and love both those things.</p>
 	<p> I'm currently working on Canvas Street - a game about doing architecture :) </p>
 
