--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 	</p>
 <h1 style="color:Tomato;"> Contact me...! </h1>
 <br>
-<br>
+<img height = "100" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"/>
 	<p>
 		Twitter and Bluesky: @smitleu 
 	</p> 
