--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 	<div id="wrapper">
 	<div id="column3">
 	<br>
-	<p>Hi! I'm Leura Smith! <img height = "100" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"/></p>
+	<p>Hi! I'm Leura Smith!</p>
 	<br>
 	<h1 style="color:Tomato;"> Thanks for visiting my website!</h1>
-	<p> I'm a game developer and architectural graduate, and love both those things.</p>
-	<p> I'm currently working on Canvas Street - a game about doing architecture :) </p>
+	<p style="text-align:center;"> I'm a game developer and architectural graduate, and love both those things.</p>
+	<p style="text-align:center;"> I'm currently working on Canvas Street - a game about doing architecture :) </p>
 
 	<br>
 	<p style="color:Tan;"> You can learn some here here!! </p>
 
-	<p> <a href="about.html">About!</a> </p>
-	<p> <a href="games.html">Games!</a> </p>
-	<p> <a href="architecture.html">Architecture!</a> </p>
-	<p> <a href="contact.html">Contact....!</a> </p>
+	<p style="text-align:center;"> <a href="about.html">About!</a> </p>
+	<p style="text-align:center;"> <a href="games.html">Games!</a> </p>
+	<p style="text-align:center;"> <a href="architecture.html">Architecture!</a> </p>
+	<p style="text-align:center;"> <a href="contact.html">Contact....!</a> </p>
 	
 </div>
     </div>
