--- a/about.html
+++ b/about.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html>
-<link href="style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
 
-<link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
-<head>
-	<title>Leura Smith About</title>
-</head>
-<body>
-<center>
-
-<p><a href="index.html">
-	      Leura Smith!
-	  </a>
-	</p>
-<h1 style="color:Tomato;">About me :)</h1>
-		<div id="wrapper">
-    <div id="column_container">
-        <div id="column1"><img height = "300" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/itsleura.png?raw=true"/></div>
-        <div id="column2"><!-- wp:paragraph --><p>Hello! I'm Leura Smith, an indie game developer, based in Melbourne, Australia. I'm a keen game designer and graduate architect, and I love all things about... well... those two things! . </p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph -->
-<p>I've worked on a pretty broad range of game projects, from games about pigeons, to more arty, exhibition games, to games made with architecture studios. I really love making games!</p>
-<p>I've done some cool stuff with architecture too - one is my submission for a school at the Seoul Bienalle, in 2023. </p>
-
-<!-- wp:paragraph -->
-<p>I've done some talks about my design process - </p>
-<!-- /wp:paragraph -->
-
-<!-- wp:list -->
-<ul><li>IndieCade 2019 - 'The importance of kindness'</li><li>ACMI, 2019, ACMI EDU - A conversation with Leura Smith</li><li>Freeplay Parallels, 2018, Melbourne International Games Week - Designing a game for my mum (<a href="https://www.youtube.com/watch?v=edEWV0UNpx4&amp;t=1088s">Pigeon Game</a>)</li></ul>
-<!-- /wp:list -->
-
-<!-- wp:paragraph -->
-<p>Thanks for checking out my little website!</p>
-<!-- /wp:paragraph -->
-<!-- /wp:paragraph --></div>
+  <link
+    href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap"
+    rel="stylesheet"
+  />
+  <head>
+    <title>Leura Smith About</title>
+  </head>
+  <body>
+    <div class="page">
+      <p><a href="index.html"> Leura Smith! </a></p>
+      <h1 style="color: Tomato">About me :)</h1>
+      <div class="column_container">
+        <div class="column_first">
+          <img
+            height="300"
+            id="img2"
+            src="https://github.com/smitleu/smitleu.github.io/blob/Pics/itsleura.png?raw=true"
+          />
+        </div>
+        <div class="column_second">
+          <p>
+            Hello! I'm Leura Smith, an indie game developer, based in Melbourne,
+            Australia. I'm a keen game designer and graduate architect, and I
+            love all things about... well... those two things! .
+          </p>
+          <p>
+            I've worked on a pretty broad range of game projects, from games
+            about pigeons, to more arty, exhibition games, to games made with
+            architecture studios. I really love making games!
+          </p>
+          <p>
+            I've done some cool stuff with architecture too - one is my
+            submission for a school at the Seoul Bienalle, in 2023.
+          </p>
+          <p>I've done some talks about my design process -</p>
+          <ul>
+            <li>IndieCade 2019 - 'The importance of kindness'</li>
+            <li>ACMI, 2019, ACMI EDU - A conversation with Leura Smith</li>
+            <li>
+              Freeplay Parallels, 2018, Melbourne International Games Week -
+              Designing a game for my mum (<a
+                href="https://www.youtube.com/watch?v=edEWV0UNpx4&amp;t=1088s"
+                >Pigeon Game</a
+              >)
+            </li>
+          </ul>
+          <p>Thanks for checking out my little website!</p>
+        </div>
+      </div>
     </div>
-</div>
-</center>
-
-</body>
+  </body>
 </html>
