--- a/architecture.html
+++ b/architecture.html
@@ -1,74 +1,119 @@
 <!DOCTYPE html>
 <html>
-<link href="style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
 
-<link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
-<head>
-	<title>Leura Smith Architecture</title>
-</head>
-<body>
-	<center>
+  <link
+    href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap"
+    rel="stylesheet"
+  />
+  <head>
+    <title>Leura Smith Architecture</title>
+  </head>
+  <body>
+    <div class="page">
+      <p>
+        <a href="index.html">Leura Smith!!!!!</a>
+      </p>
+      <div style="color: Tomato">
+        Architecture (and things related to buildings)
+      </div>
 
-	<p>
-		<a href="index.html">Leura Smith!!!!!</a>
-	</p>
-<h1 style="color:Tomato;">Architecture (and things related to buildings)</h1>
-
-
-
-
-<div id="wrapper">
-    <div id="column_container">
-        <div id="column1_games"><img height=200" src="https://github.com/smitleu/smitleu.github.io/blob/main/FitzroyHousePlan.png?raw=true"></div>
-        <div id="column2_games"><h1>Fitzroy House</h1>
-        <!-- wp:paragraph {"align":"left","customFontSize":16} -->
-<p style="font-size:15px" class="has-text-align-left">Fitzroy House is a proposal for a new building system, to address the housing crisis and genrefication in Fitzroy. It proposes a kit of parts (kind of like lego blocks) that low income earners can use to create livable spaces in the back alleys of Fitzroy streets.</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph {"customFontSize":16} -->
-<p style="font-size:15px">I design Fitzroy Street as my final project for my Masters of Architecture. It sits somewhere in between architecture and games, and I encouraged the reviewers to imagine how they might use the building blocks to design housing solutions.</p>
-<!-- /wp:paragraph --></div>
-
-
-    </div>
-    <div id="column_container">
-         <div id="column1_games"><img height=200" src="https://github.com/smitleu/smitleu.github.io/blob/main/SeoulWestElevation.jpg?raw=true"></div>
-        <div id="column2_games"><h1>Seoul School of Graffiti</h1>
-
-        	<!-- wp:paragraph {"align":"left","customFontSize":16} -->
-<p style="font-size:16px" class="has-text-align-left">During the design for this scheme, I visited Seoul, and was really taken by how the city shows it age and history - the underside of a industrial bridge marked with the changing tides of a river, grass popping through concrete paths, graffiti on structural columns. I found it all pretty beautiful, and thought it would be nice to design a 'school' that showcases the different ways humans and non humans alike, leave their mark on the city.</p> 
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph {"align":"left","customFontSize":16} -->
-<p style="font-size:16px" class="has-text-align-left">I designed the 'school' for the <strong><a href="https://2023.seoulbiennale.org/indexENG.html">Seoul Biennale of Architecture and Urbanism</a> </strong>, and my submission was chosen for exhibition during the event!</p>
-<p style="font-size:16px" class="has-text-align-left">It was also exhibited at the <strong><a href="https://www.uia-architectes.org/en/events/world-congresses-of-architects/copenhagen-2023_uia-architecture-congress-2/">World Congress of Architects</a> </strong>, as an example of architecture and nature existing in harmony.</p>
-<!-- /wp:paragraph -->
+      <div style="width: 100%;">
+        <div class="column_container">
+          <div class="column_first">
+            <img
+              height="200"
+              src="https://github.com/smitleu/smitleu.github.io/blob/main/FitzroyHousePlan.png?raw=true"
+            />
+          </div>
+          <div class="column_second">
+            <h1>Fitzroy House</h1>
+            <p style="font-size: 15px" class="has-text-align-left">
+              Fitzroy House is a proposal for a new building system, to address
+              the housing crisis and genrefication in Fitzroy. It proposes a kit
+              of parts (kind of like lego blocks) that low income earners can
+              use to create livable spaces in the back alleys of Fitzroy
+              streets.
+            </p>
+            <p style="font-size: 15px">
+              I design Fitzroy Street as my final project for my Masters of
+              Architecture. It sits somewhere in between architecture and games,
+              and I encouraged the reviewers to imagine how they might use the
+              building blocks to design housing solutions.
+            </p>
+          </div>
         </div>
-    </div>
-
-
-
-    <div id="column_container">
-        <div id="column1_games"><img height=200" src="https://github.com/smitleu/smitleu.github.io/blob/main/MuseumSketch.jpg?raw=true"></div>
-        <div id="column2_games"><h1>Museum of Routine</h1>
-
-        	<p style="font-size:16px" class="has-text-align-left">In this project, I designed a park enclosed with a circular pavillion, where visitors could sit and watch people playing in the park. It was about creating times to stop, and watch. </p>
-
+        <div class="column_container">
+          <div class="column_first">
+            <img
+              height="200"
+              src="https://github.com/smitleu/smitleu.github.io/blob/main/SeoulWestElevation.jpg?raw=true"
+            />
+          </div>
+          <div class="column_second">
+            <h1>Seoul School of Graffiti</h1>
+            <p style="font-size: 16px" class="has-text-align-left">
+              During the design for this scheme, I visited Seoul, and was really
+              taken by how the city shows it age and history - the underside of
+              a industrial bridge marked with the changing tides of a river,
+              grass popping through concrete paths, graffiti on structural
+              columns. I found it all pretty beautiful, and thought it would be
+              nice to design a 'school' that showcases the different ways humans
+              and non humans alike, leave their mark on the city.
+            </p>
+            <p style="font-size: 16px" class="has-text-align-left">
+              I designed the 'school' for the
+              <strong
+                ><a href="https://2023.seoulbiennale.org/indexENG.html"
+                  >Seoul Biennale of Architecture and Urbanism</a
+                > </strong
+              >, and my submission was chosen for exhibition during the event!
+            </p>
+            <p style="font-size: 16px" class="has-text-align-left">
+              It was also exhibited at the
+              <strong
+                ><a
+                  href="https://www.uia-architectes.org/en/events/world-congresses-of-architects/copenhagen-2023_uia-architecture-congress-2/"
+                  >World Congress of Architects</a
+                > </strong
+              >, as an example of architecture and nature existing in harmony.
+            </p>
+          </div>
         </div>
-    </div>
-
-
-
-    <div id="column_container">
-        <div id="column1_games"><img height=200" src="https://github.com/smitleu/smitleu.github.io/blob/main/RegenHouse.jpg?raw=true"></div>
-        <div id="column2_games"><h1>Regenerative House</h1>
-        	<br>
-        	<!-- wp:paragraph {"align":"left","customFontSize":16} -->
-<p style="font-size:16px" class="has-text-align-left">This scheme looked at ways to rennovate an existing 1940's house in Melbourne, and make it not only energy effecient, but regenerative in energy, resource, and for the larger community.</p>
+        <div class="column_container">
+          <div class="column_first">
+            <img
+              height="200"
+              src="https://github.com/smitleu/smitleu.github.io/blob/main/MuseumSketch.jpg?raw=true"
+            />
+          </div>
+          <div class="column_second">
+            <h1>Museum of Routine</h1>
+            <p style="font-size: 16px" class="has-text-align-left">
+              In this project, I designed a park enclosed with a circular
+              pavillion, where visitors could sit and watch people playing in
+              the park. It was about creating times to stop, and watch.
+            </p>
+          </div>
         </div>
+        <div class="column_container">
+          <div class="column_first">
+            <img
+              height="200"
+              src="https://github.com/smitleu/smitleu.github.io/blob/main/RegenHouse.jpg?raw=true"
+            />
+          </div>
+          <div class="column_second">
+            <h1>Regenerative House</h1>
+            <br />
+            <p style="font-size: 16px" class="has-text-align-left">
+              This scheme looked at ways to rennovate an existing 1940's house
+              in Melbourne, and make it not only energy effecient, but
+              regenerative in energy, resource, and for the larger community.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
-</center>
-
-</body>
+  </body>
 </html>
