--- a/contact.html
+++ b/contact.html
@@ -1,38 +1,55 @@
 <!DOCTYPE html>
 <html>
-<link href="style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
 
-<link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
-<head>
-	<title>Leura Smith Contact</title>
-</head>
-<body>
-<center>
+  <link
+    href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap"
+    rel="stylesheet"
+  />
+  <head>
+    <title>Leura Smith Contact</title>
+  </head>
+  <body>
+    <div class="page">
+      <p>
+        <a href="index.html">Leura Smith!</a>
+      </p>
+      <h1 style="color: Tomato">Contact me...!</h1>
 
-	<p>
-		<a href="index.html">Leura Smith!</a>
-	</p>
-<h1 style="color:Tomato;"> Contact me...! </h1>
-<br>
-<img height = "100" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"/>
-	<p>
-		Twitter and Bluesky: @smitleu 
-	</p> 
-	<p>
-		<a href="https://twitter.com/smitleu?lang=en"><img height="75" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/twitterloho.png?raw=true"></a>
-	</p>
-	<p>
-		Itch.io: smitleu  
-	</p>
-	<p>
-		<a href="https://smitleu.itch.io/"><img height="75" src="https://github.com/smitleu/smitleu.github.io/blob/Pics/itchlogo.png?raw=true"></a>
-	</p>
-		<p>
-		Email: smitleu@gmail.com
-	</p>
-</center>
-
-
-
-</body>
+      <div id="contact_list">
+        <div>
+          <img
+            height="100"
+            width="100"
+            src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"
+          />
+        </div>
+        <div>
+          <p>Twitter and Bluesky: @smitleu</p>
+        </div>
+        <div>
+          <a href="https://twitter.com/smitleu?lang=en"
+            ><img
+              height="75"
+              src="https://github.com/smitleu/smitleu.github.io/blob/Pics/twitterloho.png?raw=true"
+          /></a>
+        </div>
+        <div>
+          <p>Itch.io: smitleu</p>
+        </div>
+        <div>
+          <p>
+            <a href="https://smitleu.itch.io/"
+              ><img
+                height="75"
+                src="https://github.com/smitleu/smitleu.github.io/blob/Pics/itchlogo.png?raw=true"
+            /></a>
+          </p>
+        </div>
+        <div>
+          <p>Email: smitleu@gmail.com</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
