--- a/index.html
+++ b/index.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html>
+  <link href="style.css" rel="stylesheet" />
 
-<link href="style.css" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap"
+    rel="stylesheet"
+  />
 
-<link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
+  <head>
+    <title>Leura Smith</title>
+  </head>
 
-<head> <title>Leura Smith</title> </head>
+  <body>
+    <div class="page">
+      <div class="column_container">
+        <div id="column3">
+          <p>Hi! I'm Leura Smith!</p>
+          <img
+            id="img2"
+            height="100"
+            src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"
+            style="margin: 0px auto; display: block;"
+          />
+          <br />
+          <div style="color: Tomato">Thanks for visiting my website!</div>
+          <p>
+            I'm a game developer and architectural graduate, and love both those
+            things.
+          </p>
+          <p>
+            I'm currently working on Canvas Street - a game about doing
+            architecture :)
+          </p>
 
-<body
-<center>
-	<div id="column_container">
-	<div id="wrapper">
-	<div id="column3">
-	<br>
-	<p>Hi! I'm Leura Smith!</p>
-	<img height = "100" id="img2" src="https://github.com/smitleu/smitleu.github.io/blob/main/mesketch.png?raw=true"/>
-	<br>
-	<h1 style="color:Tomato;"> Thanks for visiting my website!</h1>
-	<p"> I'm a game developer and architectural graduate, and love both those things.</p>
-	<p> I'm currently working on Canvas Street - a game about doing architecture :) </p>
+          <br />
+          <p style="color: Tan">You can learn some here here!!</p>
 
-	<br>
-	<p style="color:Tan;"> You can learn some here here!! </p>
-
-	<p> <a href="about.html">About!</a> </p>
-	<p> <a href="games.html">Games!</a> </p>
-	<p> <a href="architecture.html">Architecture!</a> </p>
-	<p> <a href="contact.html">Contact....!</a> </p>
-	<br>
-	<br>
-</div>
+          <p><a href="about.html">About!</a></p>
+          <p><a href="games.html">Games!</a></p>
+          <p><a href="architecture.html">Architecture!</a></p>
+          <p><a href="contact.html">Contact....!</a></p>
+          <br />
+          <br />
+        </div>
+      </div>
     </div>
-</div>
-</center>
-
-</body>
+  </body>
 </html>
