--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
           </p>
         </div>
         <div>
-          <p>Email: leura(@)leura.online</p>
+          <p>Email: leura[at]leura.online</p>
         </div>
       </div>
     </div>
